<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txtView_titulo"
    android:textSize="30sp"
    android:textColor="@android:color/white"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@drawable/txt_btn_dos"
        android:text="@string/btn_titulo_Login"
        android:textSize="20sp"
        android:background="@drawable/btn_dos"/>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@drawable/txt_btn_dos"
        android:text="@string/btn_titulo_Guardar"
        android:textSize="20sp"
        android:background="@drawable/btn_dos"/>
    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@drawable/txt_btn_dos"
        android:text="@string/btn_titulo_Buscar"
        android:textSize="20sp"
        android:background="@drawable/btn_dos"/>

    <Button
        android:id="@+id/btnPasarParametro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@drawable/txt_btn_dos"
        android:text="@string/btn_titulo_PasarParametro"
        android:textSize="20sp"
        android:background="@drawable/btn_dos"/>


</LinearLayout>